Update custom.css with scrollbar color fix and spin animation

--- a/web-app/frontend/css/custom.css
+++ b/web-app/frontend/css/custom.css
@@ -28,6 +28,8 @@ a:hover {
 textarea {
     scrollbar-width: thin !important;
     resize: none !important;
+    /* Fix the color of the scrollbar */
+    scrollbar-color: var(--x-navy-green-2) rgba(0, 0, 0, 0.04) !important;
 }
 
 .form-check-input:focus {
@@ -87,5 +89,19 @@ textarea {
 
     100% {
         opacity: 0;
+    }
+}
+
+.spin {
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
     }
 }
